kubernetes/media/audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: "10g"
    nginx.org/client-max-body-size: "10g"
    gethomepage.dev/description: Audio Books
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon:
    gethomepage.dev/name: Paperless
    gethomepage.dev/pod-selector: "app=audiobookshelf"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &hostName audiobooks.mcmumf.dev
      secretName: audiobooks.mcmumf.dev-tls
  rules:
    - host: *hostName
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  number: 13378
